--- a/ ttdc --username trevisthomas/River/war/css/basic.css
+++ b/ ttdc --username trevisthomas/River/war/css/basic.css
@@ -1,6 +1,7 @@
 @import "common/icons/richtext2-light.css";
 @import "common/stars/stars-orange.css";
 @import "common/icons/icons-grey.css";
+@import "common/icons/icons-common.css";
 
 .tt-view-container{width:1012px; text-align:center; margin: 0 auto;}
 
