--- a/ ttdc --username trevisthomas/River/war/css/standard.css
+++ b/ ttdc --username trevisthomas/River/war/css/standard.css
@@ -22,6 +22,7 @@ pre {
   font-size: small;
 }
 */
+/*
 body {
   color: black;
   margin: 0px;
@@ -33,6 +34,7 @@ body {
 a, a:visited, a:hover {
   color: #0000AA;
 }
+*/
 
 /**
  * The reference theme can be used to determine when this style sheet has
