--- a/ ttdc --username trevisthomas/River/war/css/standard.css
+++ b/ ttdc --username trevisthomas/River/war/css/standard.css
@@ -400,11 +400,13 @@ a, a:visited, a:hover {
   color: #888;
 }
 
+/*
 .gwt-PopupPanel {
   border: 3px solid #C3D9FF;
   padding: 3px;
   background: white;
 }
+*/
 
 .gwt-DecoratedPopupPanel .popupContent {
 }
@@ -695,6 +697,7 @@ a, a:visited, a:hover {
   background-color: white;
 }
 
+/*
 .gwt-SuggestBox {
   padding: 2px;
 }
@@ -762,6 +765,8 @@ a, a:visited, a:hover {
   background: url(images/corner.png) no-repeat -5px -28px;
   -background: url(images/corner_ie6.png) no-repeat -5px -28px;
 }
+*/
+
 * html .gwt-SuggestBoxPopup .suggestPopupTopLeftInner {
   width: 5px;
   height: 5px;
