--- a/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/structure.css
@@ -37,7 +37,12 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-post-expanded-creator,
 .tt-post-panel-head-detail,
 .tt-text-normal{font-size:12px;}
+
+.tt-welcome-calendar{line-height: 22px; font-size:14px;}
+
 .tt-text-normal-bold{font-size:12px; font-weight: bold;}
+
+
 
 .tt-text-large{font-size:16px; font-weight: 500;}
 
@@ -94,7 +99,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
 .tt-pageFooter hr{ height: 1px;}
 
-
+.tt-color-calendar-nav,
 .tt-home-tabContainer,
 .tt-center{text-align:center; margin: 0 auto;}
 .tt-text-center{text-align:center;}
@@ -126,7 +131,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-clickable-icon-down{background-color: yellow; width: 18px; height: 18px;}
 .tt-clickable-icon-up{background-color: green; width: 18px; height: 18px;}
 
-.tt-hyperLinkView{ display: inline;}
+.tt-hyperLink{ display: inline; margin: 0 0.1em;}
 
 .tt-disabled{color:#eee}
 
@@ -156,7 +161,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
 .tt-fullwidth{ width: 100%; }
 
-.tt-calendar-hour-label{ width: 50px; min-height: 40px;height:100%; text-align: right; }
+.tt-calendar-hour-label{ width: 50px; min-height: 40px;height:100%; text-align: right; padding: 0 3px 0 0;}
 .tt-calendar-hour-label-cell{ height:100%;}
 
 .tt-calendar-hour{ min-height: 20px; width:100%; height:100%;}
@@ -168,7 +173,7 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 	
 .tt-calendar{ width: 100%;}
 .tt-calendar-day{ width: 550px; margin: 0 auto;}
-
+.tt-calendar-week-hour{border: solid 1px;}
 .tt-calendar-week-day-header{}
 
 .tt-calendar-month-day-headerLabel{}
@@ -177,15 +182,19 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-calendar-month-day{}
 
 .tt-calendar-year-day{}
-.tt-calendar-year-week-target{width:10px; background-color: cyan;}
+.tt-calendar-year-week-target{width:10px;}
 .tt-calendar-year-month{}
 .tt-calendar-year-month-cell{width:230px;}
 .tt-calendar-is-today{}
 .tt-calendar-is-future{}
-.tt-calendar-scale-button{width: 50px; float:right; padding:2px; margin:1px;}
-.tt-calendar-breadcrumb{overflow: auto; width: 100%; }
+.tt-calendar-scale-button{width: 50px; padding:2px; margin:1px;}
+
+
 
 /*
+
+.tt-calendar-breadcrumb{overflow: auto; width: 100%; }
+
 .tt-calendar-scale-selector{width:100px; height:40px; text-align: center; float: left;}
 .tt-calendar-scale-selector div{  margin: 4px auto; width: 100%}
 */
@@ -204,10 +213,11 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 .tt-post-summary{overflow: hidden; white-space:nowrap;}
 */
 
-.tt-welcome-login,
-.tt-welcome-calendar{	display: inline; white-space:nowrap; }
+.tt-welcome-calendar{display: inline; white-space:nowrap; }
 
+.tt-welcome-login{padding: 0 0.2em; white-space:nowrap;}
 
+.gwt-Anchor{cursor: pointer;}
 .tt-cursor-move{cursor: move;}
 .tt-cursor-pointer{cursor: pointer;}
 
@@ -268,4 +278,75 @@ body{font-family: Arial, Arial, Helvetica, sans-serif;}
 
 .tt-reviewSummaryList-header{font-size: 15px; font-weight: bolder;}
 
+.gwt-PopupPanel { border: 3px solid; padding: 3px; }
+
+
+.gwt-SuggestBox {
+  padding: 2px;
+  width: 300px;
+}
+.gwt-SuggestBoxPopup {
+  margin-left: 3px;
+  border: 3px solid;
+}
+.gwt-SuggestBoxPopup .item {
+  padding: 2px 6px;
+  cursor: default;
+}
+.gwt-SuggestBoxPopup .item-selected {
+  
+}
+.gwt-SuggestBoxPopup .suggestPopupContent {
+  
+}
+.gwt-SuggestBoxPopup .suggestPopupTopCenter {
+  background: url(images/hborder.png) repeat-x;
+}
+.gwt-SuggestBoxPopup .suggestPopupBottomCenter {
+  background: url(images/hborder.png) repeat-x 0px -4px;
+  -background: url(images/hborder_ie6.png) repeat-x 0px -4px;
+}
+.gwt-SuggestBoxPopup .suggestPopupMiddleLeft {
+  background: url(images/vborder.png) repeat-y;
+}
+.gwt-SuggestBoxPopup .suggestPopupMiddleRight {
+  background: url(images/vborder.png) repeat-y -4px 0px;
+  -background: url(images/vborder_ie6.png) repeat-y -4px 0px;
+}
+.gwt-SuggestBoxPopup .suggestPopupTopLeftInner {
+  width: 5px;
+  height: 5px;
+  zoom: 1;  
+}
+.gwt-SuggestBoxPopup .suggestPopupTopRightInner {
+  width: 8px;
+  height: 5px;
+  zoom: 1;
+}
+.gwt-SuggestBoxPopup .suggestPopupBottomLeftInner {
+  width: 5px;
+  height: 8px;
+  zoom: 1;
+}
+.gwt-SuggestBoxPopup .suggestPopupBottomRightInner {
+  width: 8px;
+  height: 8px;
+  zoom: 1;
+}
+.gwt-SuggestBoxPopup .suggestPopupTopLeft {
+  background: url(images/corner.png) no-repeat 0px -23px;
+  -background: url(images/corner_ie6.png) no-repeat 0px -23px;
+}
+.gwt-SuggestBoxPopup .suggestPopupTopRight {
+  background: url(images/corner.png) no-repeat -5px -23px;
+  -background: url(images/corner_ie6.png) no-repeat -5px -23px;
+}
+.gwt-SuggestBoxPopup .suggestPopupBottomLeft {
+  background: url(images/corner.png) no-repeat 0px -28px;
+  -background: url(images/corner_ie6.png) no-repeat 0px -28px;
+}
+.gwt-SuggestBoxPopup .suggestPopupBottomRight {
+  background: url(images/corner.png) no-repeat -5px -28px;
+  -background: url(images/corner_ie6.png) no-repeat -5px -28px;
+}
 
